--- a/PizzaDev/views/login.hbs
+++ b/PizzaDev/views/login.hbs
@@ -7,16 +7,16 @@
 <body>
   <h1>Login</h1>
   
-  <form action="/login" method="POST">
-    <label for="username">Usuário:</label>
-    <input type="text" name="username" required><br>
+  <form action="/auth/login" method="POST">
+    <label for="usuario">Usuário:</label>
+    <input type="text" name="usuario" required><br>
     
-    <label for="password">Senha:</label>
-    <input type="password" name="password" required><br>
+    <label for="senha">Senha:</label>
+    <input type="password" name="senha" required><br>
     
     <input type="submit" value="Entrar">
   </form>
   
-  <p>Não possui cadastro? <a href="/register">Clique aqui</a> para se cadastrar.</p>
+  <p>Não possui cadastro? <a href="/auth/register">Clique aqui</a> para se cadastrar.</p>
 </body>
 </html>
