--- a/PizzaDev/views/admin.hbs
+++ b/PizzaDev/views/admin.hbs
@@ -9,14 +9,18 @@
   
   <h2>Cadastro de Pizza</h2>
   <form action="/admin/pizzas" method="POST">
-    <label for="name">Nome:</label>
-    <input type="text" name="name" required><br>
+    <label for="nome">Nome:</label>
+    <input type="text" name="nome" required><br>
     
-    <label for="description">Descrição:</label>
-    <textarea name="description" required></textarea><br>
+    <label for="descricao">Descrição:</label>
+    <textarea name="descricao" required></textarea><br>
     
-    <label for="price">Preço:</label>
-    <input type="number" name="price" required><br>
+    <label for="precoBrotinho">Preço Brotinho:</label>
+    <input type="number" name="precoBrotinho" required><br>
+    <label for="precoMedia">Preço Media:</label>
+    <input type="number" name="precoMedia" required><br>
+    <label for="precoGrande">Preço Grande:</label>
+    <input type="number" name="precoGrande" required><br>
     
     <input type="submit" value="Cadastrar Pizza">
   </form>
