delete:mensagem e usuario

--- a/PizzaDev/views/admin.hbs
+++ b/PizzaDev/views/admin.hbs
@@ -32,6 +32,8 @@
     {{/each}}
   </ul>
   
-  <a href="/auth/logout">Sair</a>
+  <a href="/logout">Sair</a>
+  <a href="/admin/message">Mensagens</a>
+  <a href="/admin/users">Usuarios</a>
 </body>
 </html>
