--- a/PizzaDev/views/layouts/main.hbs
+++ b/PizzaDev/views/layouts/main.hbs
@@ -34,10 +34,13 @@
             <a class="logo" href="#">Pizza<span> DEV</span></a>
             <div class="menu">
                 <ul class="grid">
-                    <li><a class="title" href="#home">Início</a></li>
-                    <li><a class="title" href="#about">Sobre</a></li>
-                    <li><a class="title" href="#services">Serviços</a></li>
-                    <li><a class="title" href="#contact">Contato</a></li>
+                    <li><a class="title" href="/">Início</a></li>
+                    <li><a class="title" href="/#sobre">Sobre</a></li>
+                    <li><a class="title" href="/#services">Serviços</a></li>
+                    <li><a class="title" href="/#contact">Contato</a></li>
+                    <li><a class="title" href="/login">Login</a></li>
+                    <li><a class="title" href="/">Login</a></li>
+                    
                 </ul>
             </div>
             <div class="toggle icon-menu"></div>
@@ -47,6 +50,17 @@
 
     <div>
         {{{body}}}
+
+        <form action="/message" method="POST">
+    <label for="titulo">Titulo:</label>
+    <input type="text" name="titulo" required><br>
+    <label for="email">Email:</label>
+    <input type="text" name="email" required><br>
+    <label for="mensagem">Mensagem:</label>
+    <input type="text" name="mensagem" required><br>
+    
+    <input type="submit" value="Enviar">
+  </form>
     </div>
     <script src="assets/js/main.js"></script>
 
