--- a/PizzaDev/views/register.hbs
+++ b/PizzaDev/views/register.hbs
@@ -12,7 +12,7 @@
     <p class="error">{{error}}</p>
   {{/if}}
 
-  <form action="/auth/register" method="POST">
+  <form action="/register" method="POST">
     <label for="nomeCompleto">Nome Completo</label>
     <input type="text" id="nomeCompleto" name="nomeCompleto" required>
 
