--- a/PizzaDev/views/layouts/main.hbs
+++ b/PizzaDev/views/layouts/main.hbs
@@ -16,7 +16,9 @@
     <link rel="stylesheet" href="/css/icons.css">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
-
+    <script src="/js/scripts.js"></script>
+    <script src="/js/admin.js"></script>
+    <script src="/js/main.js"></script>
     <link rel="icon" href="/img/icon.png" type="image/icon type">
     <script src="js/vanilla2.js"></script>
     <title>{{tituloPagina}}</title>
@@ -55,7 +57,7 @@
     <label for="titulo">Titulo:</label>
     <input type="text" name="titulo" required><br>
     <label for="email">Email:</label>
-    <input type="text" name="email" required><br>
+    <input type="email" name="email" required><br>
     <label for="mensagem">Mensagem:</label>
     <input type="text" name="mensagem" required><br>
     
