--- a/lib/views/layouts/main.handlebars
+++ b/lib/views/layouts/main.handlebars
@@ -16,9 +16,7 @@
     <link rel="stylesheet" href="/css/icons.css">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/scripts.js"></script>
-    <script src="/js/admin.js"></script>
-    <script src="/js/main.js"></script>
+
     <link rel="icon" href="/img/icon.png" type="image/icon type">
     <script src="js/vanilla2.js"></script>
     <title>{{tituloPagina}}</title>
@@ -36,13 +34,10 @@
             <a class="logo" href="#">Pizza<span> DEV</span></a>
             <div class="menu">
                 <ul class="grid">
-                    <li><a class="title" href="/">Início</a></li>
-                    <li><a class="title" href="/#sobre">Sobre</a></li>
+                    <li><a class="title" href="/#home">Início</a></li>
+                    <li><a class="title" href="/#about">Sobre</a></li>
                     <li><a class="title" href="/#services">Serviços</a></li>
                     <li><a class="title" href="/#contact">Contato</a></li>
-                    <li><a class="title" href="/login">Login</a></li>
-                    <li><a class="title" href="/">Login</a></li>
-                    
                 </ul>
             </div>
             <div class="toggle icon-menu"></div>
@@ -52,19 +47,8 @@
 
     <div>
         {{{body}}}
-
-        <form action="/message" method="POST">
-    <label for="titulo">Titulo:</label>
-    <input type="text" name="titulo" required><br>
-    <label for="email">Email:</label>
-    <input type="email" name="email" required><br>
-    <label for="mensagem">Mensagem:</label>
-    <input type="text" name="mensagem" required><br>
-    
-    <input type="submit" value="Enviar">
-  </form>
     </div>
-    <script src="assets/js/main.js"></script>
+    <script src="public/js/main.js"></script>
 
 </body>
 
