--- a/lib/views/editar-pizza.handlebars
+++ b/lib/views/editar-pizza.handlebars
@@ -12,14 +12,19 @@
             {{mensagemErro}}
         </div>
         {{/if}}
-        
+        {{#if mensagemSucesso}}
+      <div class="msg-sucesso">
+            {{mensagemSucesso}}
+        </div>
+        {{/if}}
+
         <form action="" method="post">
             <input type="text"  name="nome" value="{{pizza.dataValues.nome}}" id="nome" class="input-field" placeholder="* Nome da Pizza" required/>
             <textarea  name="descricao" id="descricao" cols="1" rows="6" class="input-field" placeholder="* Descrição dos Ingredientes" required>{{pizza.dataValues.descricao}}</textarea>
             <div class="group-field flex">
-                <input type="number" name="precoBrotinho"  value="{{pizza.dataValues.precoBrotinho}}" id="precoBrotinho"  class="input-field" step=".01" min="0" placeholder="* Preço Brotinho" required/>
-                <input type="number" name="precoMedia"  value="{{pizza.dataValues.precoMedia}}" id="precoMedia" class="input-field" step=".01" min="0" placeholder="* Preço Média" required/>
-                <input type="number" name="precoGrande"  value="{{pizza.dataValues.precoGrande}}" id="precoGrande" class="input-field" step=".01" min="0" placeholder="* Preço Grande" required/>
+                <input type="number" name="precoBrotinho"  value="{{pizza.dataValues.precoBrotinho}}" id="precoBrotinho"  class="input-field" step=".01" min="0.01" placeholder="* Preço Brotinho" required/>
+                <input type="number" name="precoMedia"  value="{{pizza.dataValues.precoMedia}}" id="precoMedia" class="input-field" step=".01" min="0.01" placeholder="* Preço Média" required/>
+                <input type="number" name="precoGrande"  value="{{pizza.dataValues.precoGrande}}" id="precoGrande" class="input-field" step=".01" min="0.01" placeholder="* Preço Grande" required/>
             </div>
             <input type="text" name="foto"  value="{{pizza.dataValues.foto}}" id="foto" class="input-field" placeholder="Foto (ex: pizza-calabresa.jpg)" required/>
             <input type="hidden" name="id" value="{{pizza.dataValues.id}}" required>
