--- a/lib/views/indexAdmin.handlebars
+++ b/lib/views/indexAdmin.handlebars
@@ -7,7 +7,18 @@
             </a>
         </div>
 
-        {{#if listaPizzas}}
+        {{#if mensagemErro}}
+      <div class="msg-erro">
+            {{mensagemErro}}
+        </div>
+        {{/if}}
+        
+        {{#if mensagemSucesso}}
+      <div class="msg-sucesso">
+            {{mensagemSucesso}}
+        </div>
+        {{/if}}
+
         <div class="tabela-responsiva">
             <table>
                 <thead>
@@ -54,7 +65,6 @@
                 </tbody>
             </table>
         </div>
-        {{/if}}
     </div>
 </body>
 </html>
