--- a/lib/views/mensagens.handlebars
+++ b/lib/views/mensagens.handlebars
@@ -5,8 +5,14 @@
         </div>
 
         {{#if mensagemErro}}
-            <div class="msg-erro">
+      <div class="msg-erro">
             {{mensagemErro}}
+        </div>
+        {{/if}}
+        
+        {{#if mensagemSucesso}}
+      <div class="msg-sucesso">
+            {{mensagemSucesso}}
         </div>
         {{/if}}
 
