--- a/lib/views/usuarios.handlebars
+++ b/lib/views/usuarios.handlebars
@@ -7,8 +7,14 @@
         </div>
 
         {{#if mensagemErro}}
-            <div class="msg-erro">
+      <div class="msg-erro">
             {{mensagemErro}}
+        </div>
+        {{/if}}
+        
+        {{#if mensagemSucesso}}
+      <div class="msg-sucesso">
+            {{mensagemSucesso}}
         </div>
         {{/if}}
 
