--- a/lib/views/cadastrar-usuario.handlebars
+++ b/lib/views/cadastrar-usuario.handlebars
@@ -4,7 +4,7 @@
     <div class="pagina container">
         <div class="cabecalho flex bordered">
             <h1>Cadastrar Usuário</h1>
-            <a href="/login" class="botao">
+            <a href="/admin/usuarios" class="botao">
                 Voltar
             </a>
         </div>
