fix: index & main

--- a/lib/views/index.handlebars
+++ b/lib/views/index.handlebars
@@ -31,7 +31,7 @@
                         {{pizzaErro}}
                     </div>
                     {{/if}}
-                    {{#if listaPizza}}
+                    {{#if listaPizzas}}
                     {{#each listaPizzas}}
                 <p class="subtitle">Confira abaixo as nossas opções de pizzas:</p>
 
